2005-10-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/figured-bass-continuation-center.ly: new file.

	* input/regression/beam-outside-beamlets.ly: new file.

	* lily/beam.cc (set_beaming): don't clip edges.
	(connect_beams): don't clip edges.

	* lily/beaming-info.cc (clip_edges): new function.

	* lily/enclosing-bracket.cc (struct Enclosing_bracket): new file.

	* Documentation/user/instrument-notation.itely (Figured bass):
	demonstrate extenders, update seealso links.

	* scm/titling.scm (marked-up-headfoot): change tagline
	handling. tagline = ##f will blank the tagline as well.

2005-10-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely: add entry for Figured bass.

	* lily/new-figured-bass-engraver.cc (struct
	New_figured_bass_engraver): add new_music_found_ member.

	* lily/lilypond-version.cc (Lilypond_version): deal with
	incorrectly formatted version strings. 

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): switch on
	New_figured_bass_engraver by default.

	* lily/ttf.cc (print_trailer): only define glyph names when
	FT_Face has FT_FACE_FLAG_GLYPH_NAMES

2005-10-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/horizontal-bracket.cc (make_bracket): new function.

	* scm/define-grobs.scm (all-grob-descriptions): new grobs
	NewBassFigure, BassFigureBracket, BassFigureContinuation,
	BassFigureLine, BassFigureAlignment

	* lily/new-figured-bass-engraver.cc (process_music): new file.

	* lily/figured-bass-continuation.cc: new file.

	* lily/include/horizontal-bracket.hh (struct Horizontal_bracket):
	new file.

2005-10-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py: Bug fix, put the quote around the
	actual score for LaTeX documents.

	* scm/define-grobs.scm (all-grob-descriptions): Change
	collapse-height of the SystemStartBracket grob to 5.0, 
	so the bracket disappears for single stave score lines (similarly
	to SystemStartBraces). 
